Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 <li>change_delimiter(input_file_path, output_file_path, from_delimiter, to_delimiter)</li>
 <li>remove_folder_contents(folder)</li>
 <li>singleFile_to_multiFile(original_file, first_file_end_point, write_from, write_till, folder_name)</li>
+<li>vertical_file_to_integer_list(filename)</li>
 </ol>
 
 <h4>
